--- a/Front-end/style.css
+++ b/Front-end/style.css
@@ -1,55 +1,91 @@
-body, h1, form, input {
-    margin: 0;
-    padding: 0;
-  }
+:root{
+  --acccent-color:#1a0dab;
+}
 
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-  }
+
+body, h1, form, input {
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #f2f2f2;
+}
+
+header {
+  background-color: #fff;
+  padding: 10px 20px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+footer{
+  background-color: #fff;
+  padding: 10px 20px;
+}
+h1 {
+  font-size: 40px;
+  color: var(--acccent-color);
+  text-align: center;
+}
+button.header{
+  background-color: var(--acccent-color);
+  color: #fff;
+  margin-left: 20px;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.search-container {
+  margin: 250px auto;
+  max-width: 600px;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #dfe1e5;
+  border-radius: 24px;
+  outline: none;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+input[type="submit"].btn{
+  background-color: var(--acccent-color);
+  color: #fff;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 24px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+input[type="submit"].btn:hover {
+  background-color: #4d90fe;
+}
+#searchPage{
+  margin: 20px;
+}
+button.pageNum{
+  background-color: var(--acccent-color);
+  color: #fff;
+  height: 50px;
+  width: 50px;
+  border: none;
+  border-radius: 50%;
+  font-size: 1.3rem;
+  cursor: pointer;
+  margin: auto;
   
-  header {
-    background-color: #fff;
-    padding: 10px 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  }
-  
-  h1 {
-    font-size: 40px;
-    color: #1a0dab;
-    text-align: center;
-  }
-  
-  .search-container {
-    margin: 250px auto;
-    max-width: 600px;
-    padding: 0 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  input[type="text"] {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #dfe1e5;
-    border-radius: 24px;
-    outline: none;
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  input[type="submit"].btn {
-    background-color: #1a0dab;
-    color: #fff;
-    border: none;
-    padding: 12px 20px;
-    border-radius: 24px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  input[type="submit"].btn:hover {
-    background-color: #4d90fe;
-  }
-  
+}
+#pageSwitch{
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  width: 40%;
+  margin: auto;
+}
