--- a/Front-end/styles/main.css
+++ b/Front-end/styles/main.css
@@ -1,24 +1,40 @@
 :root{
+  --primary-color: #fff;
+  --secondary-color:#f2f2f2;
   --acccent-color:#1a0dab;
+  --text-color:black;
 }
 
 
 body, h1, form, input {
   margin: 0;
   padding: 0;
+  color: var(--text-color);
 }
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #f2f2f2;
+  background-color: var(--secondary-color);
 }
 
 header {
-  background-color: #fff;
+  background-color: var(--primary-color);
   padding: 10px 20px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
+.topbar{
+  display: grid;
+  grid-template-columns: 64px auto 64px;
+}
+.navbar{margin-top: 20px;}
+#settIcon{
+  transform: rotate(20);
+}
+#settIcon:hover{
+  transition: 0.1;
+  transform: rotate(90);
+}
 footer{
-  background-color: #fff;
+  background-color: var(--primary-color);
   padding: 10px 20px;
 }
 h1 {
@@ -28,8 +44,8 @@ h1 {
 }
 button.header{
   background-color: var(--acccent-color);
-  color: #fff;
-  margin-left: 20px;
+  color: var(--primary-color);
+  margin-right: 20px;
   padding: 12px 20px;
   border-radius: 5px;
   font-size: 16px;
@@ -56,7 +72,7 @@ input[type="text"] {
 
 input[type="submit"].btn{
   background-color: var(--acccent-color);
-  color: #fff;
+  color: var(--primary-color);
   border: none;
   padding: 12px 20px;
   border-radius: 24px;
@@ -73,7 +89,7 @@ input[type="submit"].btn:hover {
 button.pageNum{
   
   background-color: var(--acccent-color);
-  color: #fff;
+  color: var(--primary-color);
   height: 50px;
   width: 50px;
   
@@ -85,11 +101,11 @@ button.pageNum{
 }
 button{
   transition: 0.1s;
-  border: 2px solid white;
+  border: 2px solid var(--primary-color);
 }
 button:hover{
   transition: 0.1s;
-  background-color: white;
+  background-color: var(--primary-color);
   color: var(--acccent-color);
   border-color: var(--acccent-color);
 }
