--- a/Front-end/styles/main.css
+++ b/Front-end/styles/main.css
@@ -12,6 +12,7 @@ body, h1, form, input {
   padding: 0;
   color: var(--text-color);
 }
+a{text-decoration: none;}
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: var(--primary-color);
@@ -47,7 +48,7 @@ h1 {
   color: var(--header-color);
   text-align: center;
 }
-button{
+button,.btn{
   background-color: var(--acccent-color);
   color: var(--primary-color);
   margin-right: 20px;
