--- a/Front-end/styles/main.css
+++ b/Front-end/styles/main.css
@@ -75,6 +75,7 @@ input[type="text"] {
   width: 100%;
   padding: 12px;
   border: 1px solid #dfe1e5;
+  background-color: var(--primary-color);
   border-radius: 24px;
   outline: none;
   font-size: 16px;
