--- a/Front-end/styles/main.css
+++ b/Front-end/styles/main.css
@@ -83,9 +83,10 @@ input[type="text"] {
 }
 
 input[type="submit"].btn{
+  transition: 0.1s;
   background-color: var(--acccent-color);
   color: var(--primary-color);
-  border: none;
+  border: solid 2px var(--acccent-color);
   padding: 12px 20px;
   border-radius: 24px;
   font-size: 16px;
@@ -93,7 +94,10 @@ input[type="submit"].btn{
 }
 
 input[type="submit"].btn:hover {
-  background-color: #4d90fe;
+  transition: 0.1s;
+  background-color: var(--primary-color);
+  color: var(--acccent-color);
+  
 }
 #searchPage{
   margin: 20px;
