--- a/Front-end/styles/settings.css
+++ b/Front-end/styles/settings.css
@@ -49,6 +49,7 @@ border: 2px solid var(--text-color);
 .preTheme{
     width: 200px;
     padding: 0px;
+    margin-bottom: 10px;
 }
 #colorshow{
     grid-area: color;
