--- a/Front-end/styles/main.css
+++ b/Front-end/styles/main.css
@@ -5,149 +5,107 @@
   --header-color:#1a0dab;
   --text-color:black;
 }
+/*@font-face {
+  font-family: RapierFont;
+  src: url("../assets/fonts/RedditMono-Black.ttf");
+}*/
 
-
-body, h1, form, input {
-  margin: 0;
-  padding: 0;
-  color: var(--text-color);
-}
-a{text-decoration: none;}
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body{
+  margin: 0px;
   background-color: var(--primary-color);
+  color: var(--text-color);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+/*standard elementer*/
+button, .btn{
+  transition: 0.1s;
+  padding: 10px;
+  width: max-content;
+  font-size: 20px;
+  background-color: var(--primary-color);
+  color: var(--acccent-color);
+  border: 2px solid var(--acccent-color);
+  border-radius: 10px;
+}
+button:hover, .btn:hover{
+  transition: 0.1s;
+  background-color: var(--acccent-color);
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
 }
 
-header {
+a{ color: var(--acccent-color);}
+/*header og footer*/
+header{
   background-color: var(--secondary-color);
-  padding: 10px 20px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
-path{
-  width: 48px;
-  fill: red;
 }
 .topbar{
   display: grid;
-  grid-template-columns: 64px auto 64px;
-}
-.navbar{margin-top: 20px;}
-#settIcon{
-  transform: rotate(20);
-}
-#settIcon:hover{
-  transition: 0.1;
-  transform: rotate(90);
-}
-footer{
-  background-color: var(--primary-color);
-  padding: 10px 20px;
-}
-h1 {
-  font-size: 40px;
-  color: var(--header-color);
+  grid-template-columns: 48px auto 180px;
+  width: 98%;
+  margin: auto;
+  font-size: 1.2rem;
   text-align: center;
-}
-button,.btn{
-  background-color: var(--acccent-color);
-  color: var(--primary-color);
-  margin-right: 20px;
-  padding: 12px 20px;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-}
-button.full{
-  width: 100%;
-  height: 75px;
-  font-size: 1.5rem;
-}
-.search-container {
-  margin: 250px auto;
-  max-width: 600px;
-  padding: 0 20px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
+  color: var(--header-color);
 }
-
-input[type="text"] {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #dfe1e5;
-  background-color: var(--primary-color);
-  border-radius: 24px;
-  outline: none;
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
-input[type="submit"].btn{
-  transition: 0.1s;
-  background-color: var(--acccent-color);
-  color: var(--primary-color);
-  border: solid 2px var(--acccent-color);
-  padding: 12px 20px;
-  border-radius: 24px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-input[type="submit"].btn:hover {
-  transition: 0.1s;
-  background-color: var(--primary-color);
-  color: var(--acccent-color);
-  
-}
-#searchPage{
-  margin: 20px;
-}
-button.pageNum{
-  
-  background-color: var(--acccent-color);
-  color: var(--primary-color);
-  height: 50px;
-  width: 50px;
-  
-  border-radius: 50%;
-  font-size: 1.3rem;
-  cursor: pointer;
-  margin: auto;
-  
-}
-button{
-  transition: 0.1s;
-  border: 2px solid var(--primary-color);
-  background-color: var(--acccent-color);
-}
-button:hover, button[current]{
-  transition: 0.1s;
-  background-color: var(--primary-color);
-  color: var(--acccent-color);
-  border-color: var(--acccent-color);
-}
-#pageSwitch{
-  display: grid;
-  grid-template-columns: auto auto auto auto auto;
-  width: 40%;
-  margin: auto;
-}
-.preTheme{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--primary-color);
-  color: var(--text-color);
-  border-color: var(--acccent-color);
-}
-.preTheme > div{
-  border-bottom: solid var(--acccent-color) 2px;
-}
-.preTheme:hover{
-  background-color: var(--primary-color);
-  color: var(--text-color);
-  border-color: var(--acccent-color);
+.topbar > a {
+  margin-left: auto;
+  margin-right: auto;
 }
 .header{
-  text-align: center;
+  text-decoration: none;
+  color: var(--header-color);
+}
+footer{
+  background-color: var(--secondary-color);
+  height: auto;
+}
+input[type="text"]{
+  width: 100%;
+  height: 20px;
+  padding: 20px;
+  font-size: 1.3rem;
+  background-color: var(--primary-color);
+  color: var(--text-color);
+  border: 2px solid var(--text-color);
+  
+  border-radius: 20px;
+}
+/*søk*/
+.search-container{
+  display: grid;
+  grid-template-columns: auto 60px;
+  margin: 20px;
+}
+.search-container > input[type="text"]{
+  height: 35px;
+  padding: 10px;
+  background-color: var(--primary-color);
+  color: var(--text-color);
+  border: 2px solid var(--text-color);
+  border-right: 0px;
+  border-radius: 30px 0px 0px 30px;
+}
+
+.search-container > input[type="submit"]{
+  width: 50px;
+  border-radius: 0px 30px 30px 0px;
+  font-size: 24px;
+}
+.popup{
+  position: absolute;
+  z-index: 2;
+  width: 70%;
+  height: 80%;
+  top: 30px;
+  left: 15%;
+  background-color: var(--primary-color);
+  border: solid 2px var(--text-color);
+  border-radius: 10px;
+  
+}
+.blurred{
+  filter: blur(8px);
 }
